--- a/pandas11-15.ipynb
+++ b/pandas11-15.ipynb
@@ -541,7 +541,32 @@
    "id": "8f25f046-bc22-4d07-9c3c-c283c90fbd2d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "data = [[0, 95, 100, 105], [1, 70, None, 80]]\n",
+    "products = pd.DataFrame(data, columns=['product_id', 'store1', 'store2', 'store3']).astype({'product_id':'Int64', 'store1':'Int64', 'store2':'Int64', 'store3':'Int64'}) \n",
+    "def rearrange_products_table(products: pd.DataFrame) -> pd.DataFrame:\n",
+    "    # melt consolidates a wide format into a long one - it reduces the columns and joints them namely store\n",
+    "    # this format is more normalized and esaier to analyze - wide formats are like contains where we have a single \n",
+    "    # identifier and multiple categories holding the same type of value. This is also a normalization process. reducing reducncy for each column\n",
+    "    # now its easier to filter. \n",
+    "    return pd.melt(\n",
+    "        products, id_vars='product_id', var_name='store', value_name='price'\n",
+    "    ).dropna()\n",
+    "# Transform! For each time it occurs in the store column then add that as a row and take the value as price\n",
+    "# Create a new table generate n rows for each product eqaul to non empty entries in store\n",
+    "# Create new table product_transform\n",
+    "    # For each product for each non n/a entry in store1, store2, store3 as store \n",
+    "        # new row = product | store | cost = Products[product][store]\n",
+    "        # add new row to the table product_transform\n",
+    "\n",
+    "# Accepted\n",
+    "\"\"\"\n",
+    "Purpose:\n",
+    "The function rearrange_products_table transforms a wide DataFrame (multiple store columns) into a long DataFrame with one row per product per store.\n",
+    "This format is often easier to work with for data analysis or visualization tasks.\n",
+    "\"\"\""
+   ]
   }
  ],
  "metadata": {
